--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "PRO MERN stack book",
   "main": "index.js",
   "scripts": {
-	  "start": "node server/server.js",
+    "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
+    "@babel/preset-react": "^7.13.13",
+    "babel-cli": "^6.26.0"
   }
 }
