--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "PRO MERN stack book",
   "main": "index.js",
   "scripts": {
-   "start": "nodemon -w server server/server.js",
+    "start": "nodemon -w server server/server.js",
     "compile": "babel src --out-dir public",
     "watch": "babel src --out-dir public --watch --verbose",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,7 +16,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^2.25.1",
     "express": "^4.17.1",
+    "graphql": "^0.13.2",
     "nodemon": "^1.19.4"
   },
   "devDependencies": {
