--- a/api/package.json
+++ b/api/package.json
@@ -4,9 +4,7 @@
   "description": "PRO MERN stack book API",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -e js,graphql server/server.js",
-    "compile": "babel src --out-dir public",
-    "watch": "babel src --out-dir public --watch --verbose",
+    "start": "nodemon -e js,graphql server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,12 +19,5 @@
     "graphql": "^0.13.2",
     "mongodb": "^3.6.9",
     "nodemon": "^1.19.4"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.14.3",
-    "@babel/core": "^7.14.3",
-    "@babel/preset-env": "^7.14.2",
-    "@babel/preset-react": "^7.13.13",
-    "babel-cli": "^6.26.0"
   }
 }
