--- a/ui/package.json
+++ b/ui/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "sahaiayush-book-api",
+  "name": "sahaiayush-book-ui",
   "version": "1.0.0",
-  "description": "PRO MERN stack book API",
+  "description": "PRO MERN stack book UI",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -e js,graphql server/server.js",
+    "start": "nodemon -w uiserver.js uiserver.js",
     "compile": "babel src --out-dir public",
-    "watch": "babel src --out-dir public --watch --verbose",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "babel src --out-dir public --watch --verbose"
   },
   "repository": {
     "type": "git",
@@ -16,17 +15,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^2.25.1",
     "express": "^4.17.1",
-    "graphql": "^0.13.2",
-    "mongodb": "^3.6.9",
     "nodemon": "^1.19.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.3",
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.2",
-    "@babel/preset-react": "^7.13.13",
-    "babel-cli": "^6.26.0"
+    "@babel/preset-react": "^7.13.13"
   }
 }
