--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "PRO MERN stack book API",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -e js,graphql server.js",
+    "start": "nodemon -e js,graphql -w . -w .env server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^2.25.1",
+    "dotenv": "^6.2.0",
     "express": "^4.17.1",
     "graphql": "^0.13.2",
     "mongodb": "^3.6.9",
