--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "PRO MERN stack book API",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -e js,graphql server/server.js",
+    "start": "nodemon -w uiserver.js -w .env uiserver.js",
     "compile": "babel src --out-dir public",
     "watch": "babel src --out-dir public --watch --verbose",
     "test": "echo \"Error: no test specified\" && exit 1"
