--- a/ui/package.json
+++ b/ui/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon -w uiserver.js -w .env uiserver.js",
     "compile": "babel src --out-dir public",
+    "lint": "eslint . --ext js,jsx --ignore-pattern public",
     "watch": "babel src --out-dir public --watch --verbose"
   },
   "repository": {
