--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^0.21.0",
+    "isomorphic-fetch": "^2.2.1",
     "nodemon": "^1.19.4",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
@@ -35,8 +36,7 @@
     "react-dom": "^16.14.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^4.3.1",
-    "url-search-params": "^1.1.0",
-    "whatwg-fetch": "^3.6.2"
+    "url-search-params": "^1.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.3",
