--- a/api/package.json
+++ b/api/package.json
@@ -16,8 +16,10 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^2.25.1",
+    "body-parser": "^1.19.0",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
+    "google-auth-library": "^2.0.2",
     "graphql": "^0.13.2",
     "mongodb": "^3.6.9",
     "nodemon": "^1.19.4"
