--- a/ui/sample.env
+++ b/ui/sample.env
@@ -1,6 +1,13 @@
 UI_SERVER_PORT=8000
-UI_API_ENDPOINT=http://localhost:3000/graphql
-# UI_SERVER_API_ENDPOINT=http://localhost:3000/graphql
-# API_PROXY_TARGET=http://localhost:3000
 # ENABLE_HMR=true
 GOOGLE_CLIENT_ID=919943318793-upm69f0rp7mto9ehfrmd9vf2do9dqm99.apps.googleusercontent.com
+
+# Regular config
+# UI_API_ENDPOINT=http://localhost:3000/graphql
+# UI_AUTH_ENDPOINT=http://localhost:3000/auth
+
+# Proxy Config
+UI_API_ENDPOINT=http://localhost:8000/graphql
+UI_AUTH_ENDPOINT=http://localhost:8000/auth
+API_PROXY_TARGET=http://localhost:3000
+UI_SERVER_API_ENDPOINT=http://localhost:3000/graphql
