--- a/api/.eslintrc
+++ b/api/.eslintrc
@@ -1,9 +1,9 @@
 {
     "extends": "airbnb-base",
     "env": {
-      "node": "true"
+    "node": true
     },
-    rules: {
-      "no-console": "off"
+    "rules": {
+    "no-console": "off"
     }
-  }
+    }
