--- a/ui/package.json
+++ b/ui/package.json
@@ -22,6 +22,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^3.4.1",
@@ -34,6 +35,7 @@
     "react": "^16.14.0",
     "react-bootstrap": "^0.33.1",
     "react-dom": "^16.14.0",
+    "react-paginate": "^7.1.3",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^4.3.1",
     "react-select": "^2.4.4",
@@ -46,11 +48,13 @@
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
+    "css-loader": "^6.2.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
+    "style-loader": "^3.2.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^3.7.3",
