--- a/ui/package.json
+++ b/ui/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "http-proxy-middleware": "^0.21.0",
     "isomorphic-fetch": "^2.2.1",
+    "mdbreact": "^5.1.0",
     "nodemon": "^1.19.4",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
